WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75820
Memory allocation mismatch by using adoptArrayPtr in GraphicsContext3DOpenGL.cpp
https://bugs.webkit.org/show_bug.cgi?id=75820
Summary
Memory allocation mismatch by using adoptArrayPtr in GraphicsContext3DOpenGL.cpp
ChangSeok Oh
Reported
2012-01-08 19:29:44 PST
See
http://trac.webkit.org/browser/trunk/Source/WebCore/ChangeLog?rev=104395
One thing like upper-case still remains mismatched.
Attachments
Patch
(1.79 KB, patch)
2012-01-08 20:37 PST
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2012-01-08 20:37:25 PST
Created
attachment 121614
[details]
Patch
WebKit Review Bot
Comment 2
2012-01-08 22:01:30 PST
Comment on
attachment 121614
[details]
Patch Clearing flags on attachment: 121614 Committed
r104430
: <
http://trac.webkit.org/changeset/104430
>
WebKit Review Bot
Comment 3
2012-01-08 22:01:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug