Memory allocation mismatch by using adoptArrayPtr in GraphicsContext3DOpenGL.cpp https://bugs.webkit.org/show_bug.cgi?id=75820

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2012-01-08
Reviewed by Darin Adler.

Dbates submitted a patch to release fastMalloc allocation
in GraphicsContext3DOpenGL.cpp properly.
See http://trac.webkit.org/browser/trunk/Source/WebCore/ChangeLog?rev=104395
But one thing similar to the above still remains mismatched.

No new tests required.

* platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:
(WebCore::GraphicsContext3D::getShaderInfoLog):

Canonical link: https://commits.webkit.org/92632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104430 268f45cc-cd09-0410-ab3c-d52691b4dbfc